--- a/src/scss/utils/_index.scss
+++ b/src/scss/utils/_index.scss
@@ -1,3 +1,4 @@
+@forward "variables";
 @forward "reset";
 @forward "spacing";
 @forward "colors";
@@ -5,3 +6,5 @@
 @forward "sizing";
 @forward "flex";
 @forward "utils";
+@forward "mixins";
+@forward "functions";
