--- a/src/scss/utils/_functions.scss
+++ b/src/scss/utils/_functions.scss
@@ -20,7 +20,7 @@
 
 /// Функція для конвертації "px" в "rem"
 /// @param  {String} $px-value Значення, яке потрібно конвертувати в "px"
-/// @param  {String} [$base-font-size: 16px] Базове значення, відносно якого відбуватиметься обрахунок
+/// @param  {String} [$base-font-size: 16px] Базове значення відносно якого буде відбуватися обрахунок
 /// @return {String} Конвертоване значення в "rem"
 /// @example
 ///     rem(1000px) => 62.5rem
