--- a/src/scss/utils/_variables.scss
+++ b/src/scss/utils/_variables.scss
@@ -1,4 +1,4 @@
-// Мінімальна та максимальна ширина області перегляду з макета
+// Мінімальна та максимальна ширина області перегляду з макету
 $min-w: 375px;
 $max-w: 1440px;
 
