--- a/src/scss/utils/_font.scss
+++ b/src/scss/utils/_font.scss
@@ -1,4 +1,5 @@
-// Перелік розмірів шрифту
+@use "variables" as *;
+// Перелік розмірів шрифта
 $font-sizes: (
   "0": 0,
   xxs: $fs-xxs,
@@ -18,7 +19,7 @@ $font-sizes: (
 
 // Перелік варіантів товщини накреслення
 $weight: 100, 200, 300, 400, 500, 600, 700, 800, 900;
-// Перебираємо список накреслень тексту
+// Перебираємо список накреслень текту
 @each $w in $weight {
   .fw-#{$w} {
     font-weight: $w;
