--- a/src/scss/utils/_mixins.scss
+++ b/src/scss/utils/_mixins.scss
@@ -1,4 +1,4 @@
-// Міксин для керування властивостями флекс контейнера
+// Міскин для керуванням властивостями флекс контейнера
 // Використовується у файлі _flex.scss
 @mixin flex-center($is-column: false) {
   display: flex;
@@ -17,7 +17,7 @@
   }
 }
 
-// Міксин для респонсивного розміру шрифтів
+// Міксин для респонсивного розмішу шрифтів
 @mixin fluid-fs($min-w, $max-w, $min-fs, $max-fs) {
   $u1: unit($min-w);
   $u2: unit($max-w);
