--- a/src/scss/utils/_sizing.scss
+++ b/src/scss/utils/_sizing.scss
@@ -1,5 +1,6 @@
 $column: 1;
 $columns: 12;
+
 @for $i from $column through $columns {
   .w-#{$i} {
     width: calc(100% / $columns * $i);
@@ -10,7 +11,7 @@ $columns: 12;
   }
 }
 
-// Повна ширина/висота відносно вʼюпорта
+// Повна ширина/висота відносно вʼюпорту
 .w-full {
   width: 100vw;
 }
